src/objects/FinServ__FinancialAccount__c.object
<CustomObject>
    <description>A client&apos;s financial account, such as an investment account, bank account, or insurance policy.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinServ__Address1__c</fullName>
        <description>Street address line 1 for mailing address.</description>
        <label>Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Address2__c</fullName>
        <description>Street address line 2 for mailing address.</description>
        <label>Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ApplicationDate__c</fullName>
        <description>Date when the client submitted the financial account application.</description>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__AssetRebalance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Rebalance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__AverageBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Average Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__CashBalance__c</fullName>
        <label>Cash Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__City__c</fullName>
        <description>City for mailing address.</description>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CloseDate__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Country__c</fullName>
        <description>Country for mailing address.</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Discretionary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advisor has discretionary trading authority for this financial account.</description>
        <label>Discretionary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountNumber__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountSource__c</fullName>
        <description>Indicates source of financial account data, such as a third party integration or manual entry.</description>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Entry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccountType__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mutual Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Incomes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash and Equivalents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETFs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Management Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdrafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Loans</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinServ__HeldAway__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this financial account is managed or administered by our firm.</description>
        <label>Held Away</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__HoldingCount__c</fullName>
        <description>Number of holdings within this financial account</description>
        <label>Number of Holdings</label>
        <summaryForeignKey>FinServ__FinancialHolding__c.FinServ__FinancialAccount__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household that this financial account rolls up to.</description>
        <label>Household</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Household</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Financial Accounts</relationshipLabel>
        <relationshipName>HouseholdFinancialAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__InsuredAmount__c</fullName>
        <label>Insured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__InvestmentObjectives__c</fullName>
        <label>Investment Objectives</label>
        <picklist>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidity</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FinServ__JointOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Joint Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Joint Owner</relationshipLabel>
        <relationshipName>FAJointOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__LastUpdated__c</fullName>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this financial account is actively managed by our firm.</description>
        <label>Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__MinimumBalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Minimum Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__ModelPortfolio__c</fullName>
        <description>The model asset allocation for this financial account.</description>
        <label>Model Portfolio</label>
        <picklist>
            <picklistValues>
                <fullName>Conservative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aggressive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinServ__OpenDate__c</fullName>
        <label>Date Opened</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__OwnerType__c</fullName>
        <label>Owner Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Ownership__c</fullName>
        <label>Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinServ__PaperlessDelivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deliver documents electronically.</description>
        <label>Paperless Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Performance1Yr__c</fullName>
        <label>Performance 1Yr</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__Performance3Yr__c</fullName>
        <label>Performance 3Yr</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceMTD__c</fullName>
        <label>Performance MTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceQTD__c</fullName>
        <label>Performance QTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PerformanceYTD__c</fullName>
        <label>Performance YTD</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__PostalCode__c</fullName>
        <description>Postal code for mailing address.</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Premium__c</fullName>
        <label>Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryOwner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Primary Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>IndustriesHousehold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Account Primary Owner</relationshipLabel>
        <relationshipName>ClientFinancialAccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__RebalanceFrequency__c</fullName>
        <label>Rebalance Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semiannually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinServ__RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__RenewalDate__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__ServiceProvider__c</fullName>
        <description>Custodian or recordkeeper of this financial account.</description>
        <label>Service Provider</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__State__c</fullName>
        <description>State for mailing address.</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxID__c</fullName>
        <label>Tax ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TaxStatus__c</fullName>
        <label>Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonqualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FinServ__TimeHorizon__c</fullName>
        <label>Time Horizon</label>
        <picklist>
            <picklistValues>
                <fullName>Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsLoan__c</fullName>
        <formula>IF(ISPICKVAL(FinServ__FinancialAccountType__c, &quot;Credit Card&quot;)|| ISPICKVAL(FinServ__FinancialAccountType__c, &quot;Overdrafts&quot;)|| ISPICKVAL(FinServ__FinancialAccountType__c, &quot;Short Term Loans&quot;)|| ISPICKVAL(FinServ__FinancialAccountType__c, &quot;Long Term Loans&quot;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLoan</label>
        <type>Checkbox</type>
    </fields>
    <label>Financial Account</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <columns>NAME</columns>
        <columns>FinServ__Status__c</columns>
        <columns>FinServ__FinancialAccountNumber__c</columns>
        <columns>FinServ__Balance__c</columns>
        <columns>FinServ__InsuredAmount__c</columns>
        <columns>FinServ__OpenDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Accounts</pluralLabel>
    <recordTypes>
        <fullName>FinServ__BankingAccount</fullName>
        <active>true</active>
        <description>Bank accounts such as savings, checking, and credit</description>
        <label>Bank Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__General</fullName>
        <active>true</active>
        <description>General financial accounts</description>
        <label>General Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__InsurancePolicy</fullName>
        <active>true</active>
        <description>Insurance policies</description>
        <label>Insurance Policy</label>
    </recordTypes>
    <recordTypes>
        <fullName>FinServ__InvestmentAccount</fullName>
        <active>true</active>
        <description>Investment accounts such as brokerage accounts</description>
        <label>Investment Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FinServ__ManagedAndHeldAwayCannotBeBothSelected</fullName>
        <active>true</active>
        <errorConditionFormula>AND(FinServ__Managed__c, FinServ__HeldAway__c)</errorConditionFormula>
        <errorMessage>Select either Managed or Held Away for this Financial Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__NoJointOwnerForIndividualAccounts</fullName>
        <active>true</active>
        <description>Error message when a joint owner is entered for an individually owned account.</description>
        <errorConditionFormula>AND(ISPICKVAL(FinServ__Ownership__c , &quot;Individual&quot;), NOT(ISBLANK(FinServ__JointOwner__c)))</errorConditionFormula>
        <errorMessage>Individually owned accounts can&apos;t have a joint owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FinServ__PrimaryAndJointOwnerCannotBeSame</fullName>
        <active>true</active>
        <description>Check to see if Primary Owner and the Joint Owner are the same person</description>
        <errorConditionFormula>FinServ__PrimaryOwner__c = FinServ__JointOwner__c</errorConditionFormula>
        <errorMessage>The primary and joint owner must be different.</errorMessage>
    </validationRules>
</CustomObject>